# mongo-pipebuilder

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements-dev.txt
examples/: examples.py
src/mongo_pipebuilder/: __init__.py  builder.py
tests/: test_builder.py  test_builder_debug.py  test_builder_insert.py  test_builder_validation.py  test_builder_validation_existing.py  test_builder_validation_new.py
tests/integration/: .env.testing.example  FACTORIES.md  README.md  __init__.py  conftest.py  factories.py  test_factories.py  test_integration.py
