[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo-pipebuilder"
version = "0.3.1"
description = "Type-safe, fluent MongoDB aggregation pipeline builder"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typing_extensions>=4.0.0; python_version<'3.11'",
]
license = {text = "MIT"}
authors = [
    {name = "seligoroff", email = "seligoroff@gmail.com"}
]
keywords = ["mongodb", "aggregation", "pipeline", "builder", "query"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/seligoroff/mongo-pipebuilder"
Documentation = "https://github.com/seligoroff/mongo-pipebuilder#readme"
Repository = "https://github.com/seligoroff/mongo-pipebuilder"
Issues = "https://github.com/seligoroff/mongo-pipebuilder/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/mongo_pipebuilder",
    "--cov-report=term-missing",
    "--cov-report=html:tests/htmlcov",
    "--cov-report=json:coverage.json",
    "--cov-report=xml:coverage.xml",
    "--cov-branch",
]

[tool.coverage.run]
source = ["src/mongo_pipebuilder"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "tests/htmlcov"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

